Mon Jan 12 08:16:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_3542

        * bin/ciao_tests.lst:
          Disabled DevGuideExample test in some configurations

Fri Jan  9 15:08:23 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Gestalt.cpp:
          Layout changes

        * ace/Service_Repository.{h,cpp}:
          Doxygen changes

        * ace/Framework_Component.cpp:
          Use prefix increment

        * ace/config-win32-common.h:
          Introduced ACE_HAS_WINSOCK1 that is default set to 0

Fri Jan  9 15:01:48 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-openvms.h:
          There's no need to undef clearerr.

Fri Jan  9 09:46:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Removed "!LabVIEW_RT", "!WinCE" and "!FUZZ" from:
            TAO/tests/Portable_Interceptors/AdvSlotExt/run_test.pl
            TAO/tests/Portable_Interceptors/Redirection/run_test.pl
            TAO/tests/Portable_Interceptors/Bug_3079/run_test.pl
            TAO/tests/Portable_Interceptors/Bug_3080/run_test.pl

Thu Jan  8 19:15:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Removed "!LabVIEW_RT", "!WinCE" and "!FUZZ" from:
            TAO/tests/Portable_Interceptors/AMI/run_test.pl
            TAO/tests/Portable_Interceptors/PolicyFactory/run_test.pl
            TAO/tests/Portable_Interceptors/Request_Interceptor_Flow/run_test.pl

Wed Jan  8 18:18:37 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Removed "!LabVIEW_RT", "!WinCE" and "!FUZZ" from:
            TAO/tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/run_test.pl
            TAO/tests/Portable_Interceptors/ForwardRequest/run_test.pl
            TAO/tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/run_test.pl