@@ -62,6 +62,10 @@
 #define ACE_DEFAULT_SERVICE_REPOSITORY_SIZE 1024
 #endif /* ACE_DEFAULT_SERVICE_REPOSITORY_SIZE */
 
+#if !defined (ACE_DEFAULT_SERVICE_GESTALT_SIZE)
+#define ACE_DEFAULT_SERVICE_GESTALT_SIZE 1024
+#endif /* ACE_DEFAULT_SERVICE_GESTALT_SIZE */
+
 #if !defined (ACE_REACTOR_NOTIFICATION_ARRAY_SIZE)
 #define ACE_REACTOR_NOTIFICATION_ARRAY_SIZE 1024
 #endif /* ACE_REACTOR_NOTIFICATION_ARRAY_SIZE */
